--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -40,7 +40,7 @@
 
 <body>
     <div>
-        <h1>kakkkaakaa, entrou porque e gay</h1>
+        <h1>Vocé tem uma missão!</h1>
     </div>
     <script>
         window.alert('SE FOSSE TU SAIA DESSE SITE')
