--- a/aula05/ex003 ${}.html
+++ b/aula05/ex003 ${}.html
@@ -40,11 +40,14 @@
 
 <body>
     <div>
-        <h1>Voce tem uma missão!</h1>
+        <h1>Vocé tem uma missão!</h1>
     </div>
     <script>
-        var nome = window.prompt('qual e seu nome?')
-        alert('e um grande prazer te conhecer, ' + nome + '!')
+        var n1 = parseInt(window.prompt('digite um numero'))
+        var n2 = Number.parseInt(window.prompt(' digite outro numero'))
+        var s = n1 + n2
+        alert(`a soma enter ${n1} e ${n2} e ingual a ${s}`)
+            //assim e melhor para se usar!
     </script>
 </body>
 
