--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meu primeiro progama...</title>
+
     <style>
         * {
             padding: 0px;
@@ -40,16 +41,14 @@
 
 <body>
     <div>
-        <h1>Vocé tem uma missão!</h1>
+        <h1>ola, mundo!</h1>
     </div>
     <script>
-        window.alert('SE FOSSE TU SAIA DESSE SITE')
-        alert('NâO SAIU?')
-        alert('TO TE AVISANDO PARCEIRO')
-        alert('BLZ DEPOS NÃO DISSE QUE EU NÃO AVISEI')
-        window.confirm('IRMAO TUA ULTIMA CHANCE')
-        window.prompt('MIM FALA O MOTIVO PORQUE QUER TANTO ENTRAR?')
+        var nome =
+        window.alert("tudo bem?")
+        window.prompt('sim que bom?')
     </script>
+
 </body>
 
 </html>
