--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -46,6 +46,7 @@
     <script>
         window.alert("tudo bem?")
         window.prompt('sim que bom?')
+        window.confirm('que bom!')
     </script>
 
 </body>
