--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -16,8 +16,9 @@
 <body>
     <script>
         var nome = window.prompt('qual e o seu nome?')
-        document.write(`ola, ${nome} seu nome tem ${nome.length} letras
-                `)
+        document.write(`seu nome tem ${nome.length} letras.<br/>`)
+        document.write(`seu nome em maiusculo e ${nome.toUpperCase()}<br/>`)
+        document.write(`seu nome em menusculo e ${nome.toLowerCase()}`)
     </script>
 </body>
 
